// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageEmailGroups renders 1`] = `
<ManageEmailGroups
  httpClient={[MockFunction]}
  isEmailAllowed={true}
  isVisible={false}
  onClickCancel={[MockFunction]}
  onClickSave={[MockFunction]}
/>
`;

exports[`ManageEmailGroups renders when email is disallowed 1`] = `
<ManageEmailGroups
  httpClient={[MockFunction]}
  isEmailAllowed={false}
  isVisible={true}
  onClickCancel={[MockFunction]}
  onClickSave={[MockFunction]}
>
  <Formik
    enableReinitialize={false}
    isInitialValid={false}
    onSubmit={[Function]}
    render={[Function]}
    validateOnBlur={true}
    validateOnChange={false}
  >
    <EuiOverlayMask>
      <Portal
        containerInfo={
          <div
            class="euiOverlayMask euiOverlayMask--aboveHeader"
          >
            <div
              data-focus-guard="true"
              style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
              tabindex="0"
            />
            <div
              data-focus-guard="true"
              style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
              tabindex="1"
            />
            <div
              data-focus-lock-disabled="false"
            >
              <div
                class="euiModal modal-manage-email"
                style="max-width: 1000px;"
                tabindex="0"
              >
                <button
                  aria-label="Closes this modal window"
                  class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                  type="button"
                >
                  <div>
                    EuiIconMock
                  </div>
                </button>
                <div
                  class="euiModal__flex"
                >
                  <div
                    class="euiModalHeader"
                  >
                    <div
                      class="euiModalHeader__title"
                    >
                      Manage email groups
                    </div>
                  </div>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                  />
                  <div
                    class="euiModalBody"
                  >
                    <div
                      class="euiModalBody__overflow"
                    >
                      <div
                        style="display: flex; justify-content: center;"
                      >
                        Email is disallowed
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-focus-guard="true"
              style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
              tabindex="0"
            />
          </div>
        }
      >
        <EuiModal
          className="modal-manage-email"
          maxWidth={1000}
          onClose={[Function]}
        >
          <EuiFocusTrap>
            <FocusLock
              as="div"
              autoFocus={true}
              disabled={false}
              lockProps={
                Object {
                  "style": undefined,
                }
              }
              noFocusGuards={false}
              persistentFocus={false}
              returnFocus={true}
            >
              <div
                data-focus-guard={true}
                key="guard-first"
                style={
                  Object {
                    "height": "0px",
                    "left": "1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "fixed",
                    "top": "1px",
                    "width": "1px",
                  }
                }
                tabIndex={0}
              />
              <div
                data-focus-guard={true}
                key="guard-nearest"
                style={
                  Object {
                    "height": "0px",
                    "left": "1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "fixed",
                    "top": "1px",
                    "width": "1px",
                  }
                }
                tabIndex={1}
              />
              <div
                data-focus-lock-disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <SideEffect(FocusWatcher)
                  autoFocus={true}
                  disabled={false}
                  observed={
                    <div
                      data-focus-lock-disabled="false"
                    >
                      <div
                        class="euiModal modal-manage-email"
                        style="max-width: 1000px;"
                        tabindex="0"
                      >
                        <button
                          aria-label="Closes this modal window"
                          class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                          type="button"
                        >
                          <div>
                            EuiIconMock
                          </div>
                        </button>
                        <div
                          class="euiModal__flex"
                        >
                          <div
                            class="euiModalHeader"
                          >
                            <div
                              class="euiModalHeader__title"
                            >
                              Manage email groups
                            </div>
                          </div>
                          <hr
                            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                          />
                          <div
                            class="euiModalBody"
                          >
                            <div
                              class="euiModalBody__overflow"
                            >
                              <div
                                style="display: flex; justify-content: center;"
                              >
                                Email is disallowed
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                  onActivation={[Function]}
                  onDeactivation={[Function]}
                  persistentFocus={false}
                >
                  <FocusWatcher
                    autoFocus={true}
                    disabled={false}
                    observed={
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          class="euiModal modal-manage-email"
                          style="max-width: 1000px;"
                          tabindex="0"
                        >
                          <button
                            aria-label="Closes this modal window"
                            class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                            type="button"
                          >
                            <div>
                              EuiIconMock
                            </div>
                          </button>
                          <div
                            class="euiModal__flex"
                          >
                            <div
                              class="euiModalHeader"
                            >
                              <div
                                class="euiModalHeader__title"
                              >
                                Manage email groups
                              </div>
                            </div>
                            <hr
                              class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                            />
                            <div
                              class="euiModalBody"
                            >
                              <div
                                class="euiModalBody__overflow"
                              >
                                <div
                                  style="display: flex; justify-content: center;"
                                >
                                  Email is disallowed
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    }
                    onActivation={[Function]}
                    onDeactivation={[Function]}
                    persistentFocus={false}
                  />
                </SideEffect(FocusWatcher)>
                <div
                  className="euiModal modal-manage-email"
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "maxWidth": "1000px",
                    }
                  }
                  tabIndex={0}
                >
                  <EuiI18n
                    default="Closes this modal window"
                    token="euiModal.closeModal"
                  >
                    <EuiButtonIcon
                      aria-label="Closes this modal window"
                      className="euiModal__closeIcon"
                      color="text"
                      iconType="cross"
                      onClick={[Function]}
                    >
                      <button
                        aria-label="Closes this modal window"
                        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                        onClick={[Function]}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          size="m"
                          type="cross"
                        >
                          <div>
                            EuiIconMock
                          </div>
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                  </EuiI18n>
                  <div
                    className="euiModal__flex"
                  >
                    <EuiModalHeader>
                      <div
                        className="euiModalHeader"
                      >
                        <EuiModalHeaderTitle>
                          <div
                            className="euiModalHeader__title"
                          >
                            Manage email groups
                          </div>
                        </EuiModalHeaderTitle>
                      </div>
                    </EuiModalHeader>
                    <EuiHorizontalRule
                      margin="s"
                    >
                      <hr
                        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                      />
                    </EuiHorizontalRule>
                    <EuiModalBody>
                      <div
                        className="euiModalBody"
                      >
                        <div
                          className="euiModalBody__overflow"
                        >
                          <C
                            name="emailGroups"
                            render={[Function]}
                            validateOnChange={true}
                          >
                            <FieldArrayInner
                              formik={
                                Object {
                                  "dirty": false,
                                  "errors": Object {},
                                  "handleBlur": [Function],
                                  "handleChange": [Function],
                                  "handleReset": [Function],
                                  "handleSubmit": [Function],
                                  "initialValues": Object {},
                                  "isSubmitting": false,
                                  "isValid": false,
                                  "isValidating": false,
                                  "registerField": [Function],
                                  "resetForm": [Function],
                                  "setError": [Function],
                                  "setErrors": [Function],
                                  "setFieldError": [Function],
                                  "setFieldTouched": [Function],
                                  "setFieldValue": [Function],
                                  "setFormikState": [Function],
                                  "setStatus": [Function],
                                  "setSubmitting": [Function],
                                  "setTouched": [Function],
                                  "setValues": [Function],
                                  "submitCount": 0,
                                  "submitForm": [Function],
                                  "touched": Object {},
                                  "unregisterField": [Function],
                                  "validate": undefined,
                                  "validateField": [Function],
                                  "validateForm": [Function],
                                  "validateOnBlur": true,
                                  "validateOnChange": false,
                                  "validationSchema": undefined,
                                  "values": Object {},
                                }
                              }
                              name="emailGroups"
                              render={[Function]}
                              validateOnChange={true}
                            >
                              <div
                                style={
                                  Object {
                                    "display": "flex",
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                Email is disallowed
                              </div>
                            </FieldArrayInner>
                          </C>
                        </div>
                      </div>
                    </EuiModalBody>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard={true}
                style={
                  Object {
                    "height": "0px",
                    "left": "1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "fixed",
                    "top": "1px",
                    "width": "1px",
                  }
                }
                tabIndex={0}
              />
            </FocusLock>
          </EuiFocusTrap>
        </EuiModal>
      </Portal>
    </EuiOverlayMask>
  </Formik>
</ManageEmailGroups>
`;

exports[`ManageEmailGroups renders when visible 1`] = `
<ManageEmailGroups
  httpClient={[MockFunction]}
  isEmailAllowed={true}
  isVisible={true}
  onClickCancel={[MockFunction]}
  onClickSave={[MockFunction]}
>
  <Formik
    enableReinitialize={false}
    isInitialValid={false}
    onSubmit={[Function]}
    render={[Function]}
    validateOnBlur={true}
    validateOnChange={false}
  >
    <EuiOverlayMask>
      <Portal
        containerInfo={
          <div
            class="euiOverlayMask euiOverlayMask--aboveHeader"
          >
            <div
              data-focus-guard="true"
              style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
              tabindex="0"
            />
            <div
              data-focus-guard="true"
              style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
              tabindex="1"
            />
            <div
              data-focus-lock-disabled="false"
            >
              <div
                class="euiModal modal-manage-email"
                style="max-width: 1000px;"
                tabindex="0"
              >
                <button
                  aria-label="Closes this modal window"
                  class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                  type="button"
                >
                  <div>
                    EuiIconMock
                  </div>
                </button>
                <div
                  class="euiModal__flex"
                >
                  <div
                    class="euiModalHeader"
                  >
                    <div
                      class="euiModalHeader__title"
                    >
                      Manage email groups
                    </div>
                  </div>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                  />
                  <div
                    class="euiModalBody"
                  >
                    <div
                      class="euiModalBody__overflow"
                    >
                      <div
                        style="display: flex; justify-content: center;"
                      >
                        Loading Email Groups...
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-focus-guard="true"
              style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
              tabindex="0"
            />
          </div>
        }
      >
        <EuiModal
          className="modal-manage-email"
          maxWidth={1000}
          onClose={[Function]}
        >
          <EuiFocusTrap>
            <FocusLock
              as="div"
              autoFocus={true}
              disabled={false}
              lockProps={
                Object {
                  "style": undefined,
                }
              }
              noFocusGuards={false}
              persistentFocus={false}
              returnFocus={true}
            >
              <div
                data-focus-guard={true}
                key="guard-first"
                style={
                  Object {
                    "height": "0px",
                    "left": "1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "fixed",
                    "top": "1px",
                    "width": "1px",
                  }
                }
                tabIndex={0}
              />
              <div
                data-focus-guard={true}
                key="guard-nearest"
                style={
                  Object {
                    "height": "0px",
                    "left": "1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "fixed",
                    "top": "1px",
                    "width": "1px",
                  }
                }
                tabIndex={1}
              />
              <div
                data-focus-lock-disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <SideEffect(FocusWatcher)
                  autoFocus={true}
                  disabled={false}
                  observed={
                    <div
                      data-focus-lock-disabled="false"
                    >
                      <div
                        class="euiModal modal-manage-email"
                        style="max-width: 1000px;"
                        tabindex="0"
                      >
                        <button
                          aria-label="Closes this modal window"
                          class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                          type="button"
                        >
                          <div>
                            EuiIconMock
                          </div>
                        </button>
                        <div
                          class="euiModal__flex"
                        >
                          <div
                            class="euiModalHeader"
                          >
                            <div
                              class="euiModalHeader__title"
                            >
                              Manage email groups
                            </div>
                          </div>
                          <hr
                            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                          />
                          <div
                            class="euiModalBody"
                          >
                            <div
                              class="euiModalBody__overflow"
                            >
                              <div
                                style="display: flex; justify-content: center;"
                              >
                                Loading Email Groups...
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                  onActivation={[Function]}
                  onDeactivation={[Function]}
                  persistentFocus={false}
                >
                  <FocusWatcher
                    autoFocus={true}
                    disabled={false}
                    observed={
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          class="euiModal modal-manage-email"
                          style="max-width: 1000px;"
                          tabindex="0"
                        >
                          <button
                            aria-label="Closes this modal window"
                            class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                            type="button"
                          >
                            <div>
                              EuiIconMock
                            </div>
                          </button>
                          <div
                            class="euiModal__flex"
                          >
                            <div
                              class="euiModalHeader"
                            >
                              <div
                                class="euiModalHeader__title"
                              >
                                Manage email groups
                              </div>
                            </div>
                            <hr
                              class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                            />
                            <div
                              class="euiModalBody"
                            >
                              <div
                                class="euiModalBody__overflow"
                              >
                                <div
                                  style="display: flex; justify-content: center;"
                                >
                                  Loading Email Groups...
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    }
                    onActivation={[Function]}
                    onDeactivation={[Function]}
                    persistentFocus={false}
                  />
                </SideEffect(FocusWatcher)>
                <div
                  className="euiModal modal-manage-email"
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "maxWidth": "1000px",
                    }
                  }
                  tabIndex={0}
                >
                  <EuiI18n
                    default="Closes this modal window"
                    token="euiModal.closeModal"
                  >
                    <EuiButtonIcon
                      aria-label="Closes this modal window"
                      className="euiModal__closeIcon"
                      color="text"
                      iconType="cross"
                      onClick={[Function]}
                    >
                      <button
                        aria-label="Closes this modal window"
                        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                        onClick={[Function]}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          size="m"
                          type="cross"
                        >
                          <div>
                            EuiIconMock
                          </div>
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                  </EuiI18n>
                  <div
                    className="euiModal__flex"
                  >
                    <EuiModalHeader>
                      <div
                        className="euiModalHeader"
                      >
                        <EuiModalHeaderTitle>
                          <div
                            className="euiModalHeader__title"
                          >
                            Manage email groups
                          </div>
                        </EuiModalHeaderTitle>
                      </div>
                    </EuiModalHeader>
                    <EuiHorizontalRule
                      margin="s"
                    >
                      <hr
                        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
                      />
                    </EuiHorizontalRule>
                    <EuiModalBody>
                      <div
                        className="euiModalBody"
                      >
                        <div
                          className="euiModalBody__overflow"
                        >
                          <C
                            name="emailGroups"
                            render={[Function]}
                            validateOnChange={true}
                          >
                            <FieldArrayInner
                              formik={
                                Object {
                                  "dirty": false,
                                  "errors": Object {},
                                  "handleBlur": [Function],
                                  "handleChange": [Function],
                                  "handleReset": [Function],
                                  "handleSubmit": [Function],
                                  "initialValues": Object {},
                                  "isSubmitting": false,
                                  "isValid": false,
                                  "isValidating": false,
                                  "registerField": [Function],
                                  "resetForm": [Function],
                                  "setError": [Function],
                                  "setErrors": [Function],
                                  "setFieldError": [Function],
                                  "setFieldTouched": [Function],
                                  "setFieldValue": [Function],
                                  "setFormikState": [Function],
                                  "setStatus": [Function],
                                  "setSubmitting": [Function],
                                  "setTouched": [Function],
                                  "setValues": [Function],
                                  "submitCount": 0,
                                  "submitForm": [Function],
                                  "touched": Object {},
                                  "unregisterField": [Function],
                                  "validate": undefined,
                                  "validateField": [Function],
                                  "validateForm": [Function],
                                  "validateOnBlur": true,
                                  "validateOnChange": false,
                                  "validationSchema": undefined,
                                  "values": Object {},
                                }
                              }
                              name="emailGroups"
                              render={[Function]}
                              validateOnChange={true}
                            >
                              <div
                                style={
                                  Object {
                                    "display": "flex",
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                Loading Email Groups...
                              </div>
                            </FieldArrayInner>
                          </C>
                        </div>
                      </div>
                    </EuiModalBody>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard={true}
                style={
                  Object {
                    "height": "0px",
                    "left": "1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "fixed",
                    "top": "1px",
                    "width": "1px",
                  }
                }
                tabIndex={0}
              />
            </FocusLock>
          </EuiFocusTrap>
        </EuiModal>
      </Portal>
    </EuiOverlayMask>
  </Formik>
</ManageEmailGroups>
`;
